--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Musa Bukhari</title>
+    <title>Musa Bukhari's portfolio</title>
   </head>
   <body>
     <div id="root"></div>
